# task-force-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
alembic/: env.py
alembic/versions/: effbe0c418a5_initial.py
config/: settings.py
config/agents/: _template.yaml
src/taskforce/: main.py
src/taskforce/agents/: evolution.py  factory.py  registry.py
src/taskforce/api/: routes.py
src/taskforce/graph/: checkpointer.py  nodes.py  state.py  workflow.py
src/taskforce/orchestrator/: approval.py  brain.py
src/taskforce/storage/: database.py  models.py  redis_client.py
src/taskforce/telegram/: bot.py  callbacks.py  formatter.py  handlers.py  middleware.py
src/taskforce/utils/: risk.py
